hive-macro/tests/macro/hive/should_fail/unallowed_dependencies.stderr
error: The dependency 'quote' is not allowed in Hive test modules

         = help: The Hive testserver does not support this dependency. If it is required nonetheless, please file an issue

  --> tests/macro/hive/should_fail/unallowed_dependencies.rs:10:10
   |
10 |         {quote, std::alloc, std::io},
   |          ^^^^^
